--- a/bloco_6/dia_3_e_4/part_2/exercises/html-e-css-forms-flexbox-e-responsivo_4/style.css
+++ b/bloco_6/dia_3_e_4/part_2/exercises/html-e-css-forms-flexbox-e-responsivo_4/style.css
@@ -17,16 +17,20 @@ body {
 .logo-container {
   display: flex;
   justify-content: center;
+  flex-basis: 268px;
+  order: -1;
 }
 
 .menu-container {
   display: flex;
+  flex-basis: 500px;
+  flex-grow: 1;
 }
 
 .menu-container ul {
   display: flex;
-  justify-content: space-around;
   width: 100%;
+  justify-content:space-evenly;
 }
 
 .menu-container li {
