--- a/bloco_6/dia_3_e_4/part_2/exercises/html-e-css-forms-flexbox-e-responsivo_4/style.css
+++ b/bloco_6/dia_3_e_4/part_2/exercises/html-e-css-forms-flexbox-e-responsivo_4/style.css
@@ -78,6 +78,8 @@ body {
   flex-direction: column;
   margin: 20px;
   flex-basis: 350px;
+  justify-content: center;
+  
 }
 
 .aside-container h3, h4 {
