--- a/bloco_6/dia_3_e_4/part_2/exercises/html-e-css-forms-flexbox-e-responsivo_4/style.css
+++ b/bloco_6/dia_3_e_4/part_2/exercises/html-e-css-forms-flexbox-e-responsivo_4/style.css
@@ -24,14 +24,12 @@ body {
 .menu-container {
   display: flex;
   flex-basis: 500px;
-  flex-grow: 1;
 }
 
 .menu-container ul {
   display: flex;
   width: 100%;
   justify-content:space-evenly;
-  align-self: center;
 }
 
 .menu-container li {
@@ -44,12 +42,13 @@ body {
 
 .main-container {
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
 }
 
 .movie-container {
   display: flex;
   flex-direction: column;
+  flex-basis: 700px;
 }
 
 .movie-container h2 {
@@ -71,6 +70,8 @@ body {
   height: 150px;
   justify-content: center;
   margin: 10px;
+  flex-basis: 16%;
+  flex-grow: 10;
 }
 
 .aside-container {
@@ -78,8 +79,8 @@ body {
   flex-direction: column;
   margin: 20px;
   flex-basis: 350px;
-  justify-content: center;
-  
+  flex-grow: 2;
+  align-self: center;
 }
 
 .aside-container h3, h4 {
